--- a/contact.html
+++ b/contact.html
@@ -28,16 +28,15 @@
 			<div class="main_whiteWrapper">
 				<h2>Contact Me</h2>
 				<img class="avaImg" src="assets/ava.png" alt="Online Avatar">
-				<p>The following links can be used to contact me or see some of my other work:</p>
+				<p>The following link can be used to contact me:</p>
 				<div id="contact_iconContainer">
-					<a href="mailto:amkin13@ilstu.edu" target="_blank" class="bi bi-envelope-fill"></a>
-					<a href="https://twitter.com/_AeroDev_" target="_blank" class="bi bi-twitter"></a>
+					<a href="mailto:aaronking-dev@proton.me" target="_blank" class="bi bi-envelope-fill"></a>
 				</div>
 			</div>
 		</main>
 
 		<footer>
-			<p>© 2023 Aaron King</p>
+			<p>© 2026 Aaron King</p>
 		</footer>
 	</div>
 </body>
