--- a/education.html
+++ b/education.html
@@ -30,27 +30,16 @@
 				<img class="projects_logoImage" src="assets/ISU_Big.png" alt="Illinois State University Redbirds">
 				<p><span class="projects_textHighlight">Major:</span> Creative Technologies - Game Design</p>
 				<p><span class="projects_textHighlight">Duration:</span> August 2022 - Present</p>
+				<p><span class="projects_textHighlight">GPA:</span> 3.93</p>
+				<p><span class="projects_textHighlight">Enrolled in the Honors Program</span></p>
 				<br>
-				<p>I will graduate from Illinois State University in 2026.</p>
+				<p>I will graduate from Illinois State University in May 2026.</p>
 			</div>
 			<div class="margin_12px"></div>
-			<div class="main_whiteWrapper">
-				<h2>Pekin Community High School</h2>
-				<img class="projects_logoImage" src="assets/PCHS.png" alt="Pekin Community High School">
-				<p><span class="projects_textHighlight">GPA:</span> 4.24</p>
-				<p><span class="projects_textHighlight">Duration:</span> August 2018 - May 2022</p>
-				<br>
-				<p>While at Pekin Community High School, I participated in a few extra-cirricular activities and spent some time volunteering:</p>
-				<ul class="grey_list">
-					<li>Worked as part of Dragon Tech Support my senior year, volunteering by helping students with technical issues with their Chromebooks. All students receive Chromebooks from the school.</li>
-					<li>Worked as a librarian's assistant during my sophomore year, volunteering by helping out around the school library.</li>
-					<li>Was part of the school's CyberPatriot team my sophomore year. Worked with the team to compete in competitions meant to test technical skills in a variety of sectors using desktop computers.</li>
-				</ul>
-			</div>
 		</main>
 
 		<footer>
-			<p>© 2023 Aaron King</p>
+			<p>© 2026 Aaron King</p>
 		</footer>
 	</div>
 </body>
