--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 					<img id="home_avaImg" src="assets/ava.png" alt="Online Avatar">
 					<div id="home_gridText">
 						<p>Hello, and welcome to my Portfolio site!</p>
-						<p>I'm Aaron King, an aspiring game designer and programmer.</p>
+						<p>I'm Aaron King, a game designer and programmer that has worked on multiple live-service volunteer MMOs, and am currently developing a commercial indie game, FriendOS.</p>
 						<h3>Site Structure:</h3>
 						<ul class="grey_list">
-							<li>I've worked on multiple programming and design projects which you can find under the <b>Projects</b> tab.</li>
-							<li>I've completed High School and am currently enrolled at Illinois State University, which can be found under the <b>Education</b> tab.</li>
-							<li>If you would like to speak with me, that can be done under the <b>Contact Me</b> tab.</li>
+							<li>I've worked on multiple game programming and design projects which you can find under the <b>Projects</b> tab.</li>
+							<li>I am currently enrolled at Illinois State University, which can be found under the <b>Education</b> tab.</li>
+							<li>To contact me, visit the <b>Contact Me</b> tab.</li>
 						</ul>
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 		</main>
 
 		<footer>
-			<p>© 2023 Aaron King</p>
+			<p>© 2026 Aaron King</p>
 		</footer>
 	</div>
 </body>
