--- a/projects.html
+++ b/projects.html
@@ -29,17 +29,73 @@
 		<main>
 			<div class="main_whiteWrapper">
 				<h2>Projects</h2>
-				<p>As an aspiring game developer and game designer, I have worked on several private server revival projects within the community for the now defunct MMO game, Toontown Online.</p>
+				<p>I am currently working on FriendOS, an indie multiplayer Action RPG.</p>
+				<p>Additionally, I have previously worked on several volunteer private server revival projects within the community for the now defunct MMO game, Toontown Online.</p>
 			</div>
 			<div class="margin_12px"></div>
 			<div class="main_whiteWrapper">
-				<h2>Toontown: Corporate Clash</h2>
-				<img class="projects_logoImage" src="assets/clash_logo.webp" alt="Toontown: Corporate Clash">
-				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Content Designer</p>
-				<p><span class="projects_textHighlight">Duration:</span> May 2020 - April 2021, March 2022 - Present</p>
+				<h2><a href="https://store.steampowered.com/app/3727410/FriendOS/" target="_blank">FriendOS</a></h2>
+				<img class="projects_logoImage" src="assets/friendos_logo.png" alt="FriendOS Logo">
+				<p>FriendOS is an Online Co-Op Action RPG where balls fly and viruses die! Strike and batter your opponents in Cartoon Sports Combat, and create the virtual animal avatar of your dreams. Hang out or team up with others to protect the world of FriendOS from virus corruption.</p>
+				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Game Designer, Level Designer</p>
+				<p><span class="projects_textHighlight">Duration:</span> September 2024 - Present</p>
+				<p><span class="projects_textHighlight">Releasing in 2026</span></p>
+				<br>
+				<ul class="projects_list">
+					<li>Placeholder</li>
+				</ul>
+				<p>Placeholder</p>
+				<h3>Gallery</h3>
+				<div class="projects_gallery">
+					<a href="assets/SBTF_main.jpg" data-fancybox="gallery-ttr" data-caption="Sellbot Task Force Logo Brand Art">
+						<img class="projects_galleryImage" src="assets/SBTF_thumb.png">
+					</a>
+				</div>
+			</div>
+			<div class="margin_12px"></div>
+			<div class="main_whiteWrapper">
+				<h2><a href="https://www.toontownrewritten.com" target="_blank">Toontown Rewritten</a></h2>
+				<img class="projects_logoImage" src="assets/ttr_logo.webp" alt="Toontown Rewritten">
+				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Game Designer</p>
+				<p><span class="projects_textHighlight">Duration:</span> August 2021 - March 2022, July 2024 - October 2025</p>
 				<br>
 				<p>While working on the project, as part of the Game Programmer role, I was responsible for developing major features for future content updates in Python using the Panda3D game engine. Features and projects that I worked on under this role include:</p>
-				<ul class="grey_list">
+				<ul class="projects_list">
+					<li>Working with and finalizing the revamp of the game's turn-based battle system</li>
+					<li>Finalizing new quest systems and objectives as part of the "Sellbot Task Force" update</li>
+					<li>Many various polish and cleanliness projects as part of finalizing the "Sellbot Task Force" update</li>
+					<li>Various miscellaneous work on every facet of the "Sellbot Task Force" update</li>
+					<li>Various game refactors developed for future content sustainability including the game's quests, building interiors, enemies, and player progression</li>
+				</ul>
+				<p>As part of the Game Designer role, I was also responsible for collecting, organizing, and presenting user feedback, designing new turn-based battle encounters, referring to and reflecting upon design decisions present in the origin game, Toontown Online, and acting upon user feedback to improve the overall user experience for our players.</p>
+				<h3>Gallery</h3>
+				<div class="projects_gallery">
+					<a href="assets/SBTF_main.jpg" data-fancybox="gallery-ttr" data-caption="Sellbot Task Force Logo Brand Art">
+						<img class="projects_galleryImage" src="assets/SBTF_thumb.png">
+					</a>
+					<a href="assets/SBTF_Hideout_main.webp" data-fancybox="gallery-ttr" data-caption="The Sellbot Task Force Hideout">
+						<img class="projects_galleryImage" src="assets/SBTF_Hideout_thumb.png">
+					</a>
+					<a href="assets/SBFO_ext_main.jpg" data-fancybox="gallery-ttr" data-caption="A Sellbot Field Office">
+						<img class="projects_galleryImage" src="assets/SBFO_ext_thumb.png">
+					</a>
+					<a href="assets/SBFO_ice_main.webp" data-fancybox="gallery-ttr" data-caption='A screenshot from the "Cold Caller Cubicles" minigame'>
+						<img class="projects_galleryImage" src="assets/SBFO_ice_thumb.png">
+					</a>
+					<a href="assets/SBFO_maze_main.webp" data-fancybox="gallery-ttr" data-caption='A screenshot from the "Mega-Mover Maze" minigame'>
+						<img class="projects_galleryImage" src="assets/SBFO_maze_thumb.png">
+					</a>
+				</div>
+			</div>
+			<div class="margin_12px"></div>
+			<div class="main_whiteWrapper">
+				<h2><a href="https://www.corporateclash.net" target="_blank">Toontown: Corporate Clash</a></h2>
+				<img class="projects_logoImage" src="assets/clash_logo.webp" alt="Toontown: Corporate Clash">
+				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Content Designer, Producer</p>
+				<p><span class="projects_textHighlight">Duration:</span> May 2020 - April 2021, March 2022 - March 2024</p>
+				<br>
+				<p>While working on the project, as part of the Game Programmer role, I was responsible for developing major features for future content updates in Python using the Panda3D game engine. Features and projects that I worked on under this role include:</p>
+				<ul class="projects_list">
 					<li>Major upgrades and refactors of the game's turn-based battle system</li>
 					<li>Taking storyboards and cutscene specifications from the project's Creative, Writing, and Content Design departments and building them in-engine using the project's Cutscene Editor</li>
 					<li>Implementation of various battle designs as part of the v1.3.0 "Hires & Heroes" update</li>
@@ -66,44 +122,10 @@
 					</a>
 				</div>
 			</div>
-			<div class="margin_12px"></div>
-			<div class="main_whiteWrapper">
-				<h2>Toontown Rewritten</h2>
-				<img class="projects_logoImage" src="assets/ttr_logo.webp" alt="Toontown Rewritten">
-				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Game Designer</p>
-				<p><span class="projects_textHighlight">Duration:</span> August 2021 - March 2022</p>
-				<br>
-				<p>While working on the project, as part of the Game Programmer role, I was responsible for developing major features for future content updates in Python using the Panda3D game engine. Features and projects that I worked on under this role include:</p>
-				<ul class="projects_list">
-					<li>Working with and finalizing the revamp of the game's turn-based battle system</li>
-					<li>Finalizing new quest systems and objectives as part of the "Sellbot Task Force" update</li>
-					<li>Many various polish and cleanliness projects as part of finalizing the "Sellbot Task Force" update</li>
-					<li>Various miscellaneous work on every facet of the "Sellbot Task Force" update</li>
-				</ul>
-				<p>As part of the Game Designer role, I was also responsible for collecting, organizing, and presenting user feedback, designing new turn-based battle encounters, referring to and reflecting upon design decisions present in the origin game, Toontown Online, and acting upon user feedback to improve the overall user experience for our players.</p>
-				<h3>Gallery</h3>
-				<div class="projects_gallery">
-					<a href="assets/SBTF_main.jpg" data-fancybox="gallery-ttr" data-caption="Sellbot Task Force Logo Brand Art">
-						<img class="projects_galleryImage" src="assets/SBTF_thumb.png">
-					</a>
-					<a href="assets/SBTF_Hideout_main.webp" data-fancybox="gallery-ttr" data-caption="The Sellbot Task Force Hideout">
-						<img class="projects_galleryImage" src="assets/SBTF_Hideout_thumb.png">
-					</a>
-					<a href="assets/SBFO_ext_main.jpg" data-fancybox="gallery-ttr" data-caption="A Sellbot Field Office">
-						<img class="projects_galleryImage" src="assets/SBFO_ext_thumb.png">
-					</a>
-					<a href="assets/SBFO_ice_main.webp" data-fancybox="gallery-ttr" data-caption='A screenshot from the "Cold Caller Cubicles" minigame'>
-						<img class="projects_galleryImage" src="assets/SBFO_ice_thumb.png">
-					</a>
-					<a href="assets/SBFO_maze_main.webp" data-fancybox="gallery-ttr" data-caption='A screenshot from the "Mega-Mover Maze" minigame'>
-						<img class="projects_galleryImage" src="assets/SBFO_maze_thumb.png">
-					</a>
-				</div>
-			</div>
 		</main>
 
 		<footer>
-			<p>© 2023 Aaron King</p>
+			<p>© 2026 Aaron King</p>
 		</footer>
 	</div>
 
