FriendOS fill out

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 						</ul>
 					</div>
 				</div>
+				<h3>Software</h3>
+				<div id="home_iconContainer">
+					<a href="https://www.godotengine.org" target="_blank">
+						<img class="home_logo" src="assets/Godot_icon.svg" alt="Godot Engine">
+					</a>
+					<a href="https://www.panda3d.org" target="_blank">
+						<img class="home_logo" src="assets/panda3d.webp" alt="Panda3D Engine">
+					</a>
+					<a href="https://www.unity.com" target="_blank">
+						<img class="home_logo" src="assets/unity_logo.png" alt="Unity Engine">
+					</a>
+				</div>
 			</div>
 		</main>
 
