--- a/projects.html
+++ b/projects.html
@@ -37,18 +37,34 @@
 				<h2><a href="https://store.steampowered.com/app/3727410/FriendOS/" target="_blank">FriendOS</a></h2>
 				<img class="projects_logoImage" src="assets/friendos_logo.png" alt="FriendOS Logo">
 				<p>FriendOS is an Online Co-Op Action RPG where balls fly and viruses die! Strike and batter your opponents in Cartoon Sports Combat, and create the virtual animal avatar of your dreams. Hang out or team up with others to protect the world of FriendOS from virus corruption.</p>
-				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Game Designer, Level Designer</p>
+				<p><span class="projects_textHighlight">Position:</span> Game Programmer, Game Designer, Level Designer, Generalist</p>
 				<p><span class="projects_textHighlight">Duration:</span> September 2024 - Present</p>
-				<p><span class="projects_textHighlight">Releasing in 2026</span></p>
+				<p><span class="projects_textHighlight">Releasing in Early Access in 2026</span></p>
 				<br>
+				<p>Made with the Godot Engine, this is the first commercial project of our indie game company, Dog in the Machine. Due to our small team size, many of us have taken on a generalist role. Aspects of the project that I have worked on include:</p>
 				<ul class="projects_list">
-					<li>Placeholder</li>
+					<li>Back-end multiplayer networking and infrastructure for a multiplayer 3D game, integrated with Steam's Steamworks API</li>
+					<li>Mechanics and content design and programming, including enemies, weapons, and mobility</li>
+					<li>General game infrastructure including save systems, settings, localization, controller support, and tooling</li>
+					<li>Level design and implementation in-engine of small and medium sized environments, ranging from proc-gen dungeon rooms to full overworld environments</li>
 				</ul>
-				<p>Placeholder</p>
+				<p>It has been extremely difficult but also extremely gratifying to work on a game project from the ground up that we are fully in control of. Dog in the Machine (our game company) is made up of many previous developers and artists that I worked with on Toontown: Corporate Clash, and working on FriendOS has truly let us develop the type of game we've always wanted to make.</p>
 				<h3>Gallery</h3>
 				<div class="projects_gallery">
-					<a href="assets/SBTF_main.jpg" data-fancybox="gallery-ttr" data-caption="Sellbot Task Force Logo Brand Art">
-						<img class="projects_galleryImage" src="assets/SBTF_thumb.png">
+					<a href="assets/FriendOS_main.jpg" data-fancybox="gallery-friendos" data-caption="FriendOS Brand Art">
+						<img class="projects_galleryImage" src="assets/FriendOS_main.jpg">
+					</a>
+					<a href="assets/FriendOS_battle.jpg" data-fancybox="gallery-friendos" data-caption="A screenshot of a battle in FriendOS">
+						<img class="projects_galleryImage" src="assets/FriendOS_battle.jpg">
+					</a>
+					<a href="assets/FriendOS_dialogue.jpg" data-fancybox="gallery-friendos" data-caption="A screenshot of character dialogue in FriendOS">
+						<img class="projects_galleryImage" src="assets/FriendOS_dialogue.jpg">
+					</a>
+					<a href="assets/FriendOS_avatar.jpg" data-fancybox="gallery-friendos" data-caption="A screenshot of the avatar creator in FriendOS">
+						<img class="projects_galleryImage" src="assets/FriendOS_avatar.jpg">
+					</a>
+					<a href="assets/FriendOS_fishing.jpg" data-fancybox="gallery-friendos" data-caption="A screenshot of fishing in FriendOS">
+						<img class="projects_galleryImage" src="assets/FriendOS_fishing.jpg">
 					</a>
 				</div>
 			</div>
